# funktools

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yaml
demo/: __main__.py  advanced.py  cli.py  first_example.py  memoize.py  throttle.py
examples/templates/: CMakeLists.txt  README.md  test_example.py.in
examples/templates/cmake/: variables.cmake
examples/templates/src/: example.cpp
funktools/: ._template.py.swp  __init__.py  _base.py  _cli.py  _log.py  _lru_cache.py  _noop.py  _retry.py  _sqlite_cache.py  _template.py  _throttle.py
test/: test_base.py  test_cli.py  test_lru_cache.py  test_memoize.py  test_rate_decorator.py  test_retry.py  test_sqlite_cache.py  test_template.py  test_throttle.py
